# skillforge

./: .gitignore  README.md
backend/: pyproject.toml
backend/data/runs/weighted-gdp-calc__67661025/: verifier_output.txt
backend/src/skillforge/: __init__.py  cli.py  config.py  database.py  main.py
backend/src/skillforge/api/: __init__.py  agents.py  analytics.py  router.py  runs.py  skills.py  tasks.py  trajectories.py  ws.py
backend/src/skillforge/engine/: __init__.py  benchflow_backend.py  custom_docker_backend.py  docker_client.py  orchestrator.py  token_extractor.py  trajectory_parser.py
backend/src/skillforge/engine/agents/: __init__.py  base.py  registry.py
backend/src/skillforge/models/: __init__.py  run.py  skill.py  task.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/app/runs/new/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/skills/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/common/: EmptyState.tsx  StatusIndicator.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/skills/: SkillDiffViewer.tsx  SkillEditor.tsx
frontend/src/components/trajectory/: SkillUsageCard.tsx  TrajectoryPlayer.tsx  TrajectoryTimeline.tsx
frontend/src/lib/: api.ts  utils.ts  websocket.ts
(+3 files in other folders)
